// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component with children props 1`] = `
<span
  className="MuiPaper-root-1 MuiPaper-shadow2-5 MuiPaper-rounded-2"
  style={undefined}
  tag="span"
>
  <div>
    Hello
  </div>
</span>
`;

exports[`Card component with tag props 1`] = `
<span
  className="MuiPaper-root-1 MuiPaper-shadow2-5 MuiPaper-rounded-2"
  style={undefined}
  tag="span"
/>
`;

exports[`CardBody with children props 1`] = `
<div
  className="MuiCardContent-root-30 span"
  style={
    Object {
      "width": 200,
    }
  }
/>
`;

exports[`CardFooter with children props 1`] = `
<div
  className="MuiCardActions-root-61 span"
/>
`;

exports[`CardHeader with children props 1`] = `
<div
  className="MuiCardContent-root-30 MuiCardHeader-root-31 span"
  style={undefined}
>
  <div
    className="MuiCardHeader-content-34"
  >
    <span
      className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-35"
    >
      hello
    </span>
    <span
      className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-58 MuiCardHeader-subheader-36"
    >
      second
    </span>
  </div>
</div>
`;

exports[`CardMedia with children props 1`] = `
<div
  className="MuiCardMedia-root-28 span"
  src={undefined}
  style={
    Object {
      "backgroundImage": "url(https://material-ui-next.com/static/images/remy.jpg)",
      "height": 200,
    }
  }
/>
`;
